# scanmem

./: .clang-format  .gitignore  .gitignore copy  CMakeLists.txt  README.md  TODO-zh.md  config.h.in
.cache/clangd/index/: commands.c.5361A34DF9E5486C.idx  commands.h.0133172D9E7005CF.idx  common.c.A58AFFFFF1BB046B.idx  common.h.5EFB2F5ACF778372.idx  endianness.h.EFA4F1812655E2D1.idx  getline.h.B5F26B297579B89A.idx  handlers.c.DDAFE34292719F62.idx  handlers.h.D021C70C1780C9DD.idx  interrupt.c.03F4528CC3EE5770.idx  interrupt.h.8F628AD477B8650D.idx  licence.h.CD7063B49A9D57B2.idx  list.h.95CEA3070A7B7296.idx  main.c.B6BF704545FA1EBC.idx  maps.c.4983BE8D7436871E.idx  maps.h.DD856E7FC127CFA0.idx  memfake.c.020A380A012D74FC.idx  menu.c.B09DEE2A4ED5F446.idx  menu.h.B1DA7DD4CBBC3FBD.idx  ptrace.c.B77FFC9D3D63D48A.idx  readline.c.349428164D8EE307.idx  readline.h.73893C41B3420940.idx  scanmem.c.1A8E09631D5AA8AC.idx  scanmem.h.79B67B255C8C500A.idx  scanroutines.c.4A553BC0F1585FDD.idx  scanroutines.h.99944D92494E28CB.idx  sets.c.C2437A52FE804F0E.idx  sets.h.20B3A219E3B8B497.idx  show_message.c.B23985BB09552124.idx  show_message.h.01FA0C7744CE12AF.idx  targetmem.c.96233CF5AB9C4062.idx  targetmem.h.6819DAAEEB047B24.idx  value.c.79426C50BB1257F1.idx  value.h.DDCAC61ABBB65372.idx
cmake/: FindReadline.cmake
docs/zh/: 项目文件基础说明.md
src/: CMakeLists.txt  common.h  main.c
test/: CMakeLists.txt  sm_test.sh
